Sort tags by questions answered instead of by score

--- a/public/app/js/profile/profile_template.html
+++ b/public/app/js/profile/profile_template.html
@@ -14,7 +14,7 @@
         </span>
       </br>
         <h3>Tags</h3>
-        <span ng-repeat="score in user.scores|orderBy:'-score'|filter:tagFilter">
+        <span ng-repeat="score in user.scores|orderBy:'-answered'|filter:tagFilter">
           <score-display score="score" ng-click="setCurrentCategory(score)"> </score-display>
         </span>
       </div>
