--- a/public/app/js/quiz/quiz_template.html
+++ b/public/app/js/quiz/quiz_template.html
@@ -1,10 +1,7 @@
 <div class = "categories well">
 
-    <div class = 'container-fluid'>
+    <div class = 'container-fluid' ng-hide = "category">
       <div class = "row">
-        <div class = "col-sm-6" ng-show = "user.scores.length">
-          <strong class = "h2">Elo Score: {{eloScore|number:0}}</strong>
-        </div>
         <div class = "col-sm-6">
           <strong>Popular Categories: </strong>
           <select ng-options = "category.name for category in categories | orderBy:'-questions_count' | filter:catFilter" ng-model = "selectedCategory" ng-change = "loadQuestion(selectedCategory)"> </select>
@@ -12,7 +9,7 @@
       </div>
       <div class = 'row'>
         <div class = 'col-sm-12' ng-show = "user.scores.length">
-          <strong>Your Categories:</strong>
+          <strong>Categories:</strong>
           <span ng-repeat ="category in user.scores | filter:scoreFilter | orderBy:'-score' | limitTo:limit " ng-click="loadQuestion(category._category)"><score-display score = "category"></score-display></span>
           <i><small><span ng-show="limit<user.scores.length" ng-click = "limit=limit+5">More</span><span ng-show="limit>5" ng-click = "limit=limit - 5">Less</span></small></i>
         </div>
@@ -20,6 +17,9 @@
           <span class = "h3">Select from popular categories to start increasing your elo score.</span>
         </div>
       </div>
+    </div>
+    <div class = 'container-fluid' ng-show = "category" ng-click = "category = null">
+      <h1 class = "uppercase center">{{category.name}} {{user.scores[categoryIndexInUser].score | number:0}}</h1>
     </div>
 </br>
 
