--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     </ng-view>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
     <script src = "app/app.js"></script>
     <script src = "app/js/quiz/quizController.js"></script>
     <script src = "app/js/auth/authController.js"></script>
