--- a/public/app/js/profile/profile_template.html
+++ b/public/app/js/profile/profile_template.html
@@ -1,20 +1,21 @@
 <div class="container-fluid">
-    <div class="well">
-      <h3 class = "profile-header">{{user.display_name}}'s Score: {{eloScore|number:0}}</h3>
-      <div class="user-profile row">
-        <img ng-src="{{user.pictureUrl}}" class="profile-img-button">
-      </div>
+  <div class="well">
+    <h3 class="profile-header">{{user.display_name}}'s Score: {{eloScore|number:0}}</h3>
+    <div class="user-profile row">
+      <img ng-src="{{user.pictureUrl}}" class="profile-img-button">
     </div>
+  </div>
 
-    <div class="white card">
-      <div class="max-scroll-box profile">
-        <div class = "clearfix">
-          <h3 class = "center">Categories</h3>
-          <span ng-repeat="score in user.scores|orderBy:'-score'|filter:catFilter">
-            <score-display class = "vertical-expand-in" score="score" ng-click="setCurrentCategory(score)" ng-hide = "currentCategory==score"> </score-display>
+  <div class="white card">
+    <div class="max-scroll-box profile">
+      <div class="clearfix">
+        <h3 class="center">Categories</h3>
+        <span ng-repeat="score in user.scores|orderBy:'-score'|filter:catFilter">
+          <div class="score-wrapper">
+            <score-display class="vertical-expand-in" score="score" ng-click="setCurrentCategory(score)" ng-hide="currentCategory==score"> </score-display>
 
             <div class="white card vertical-expand-in" ng-if='currentCategory==score'>
-              <div class="h3">{{currentCategory._category.name.toUpperCase()}}</div>
+              <div class="h4">{{currentCategory._category.name.toUpperCase()}}</div>
               <div class="">
                 Correct: {{currentCategory.correct}}/{{currentCategory.answered}} {{currentCategory.correct*100/currentCategory.answered |number:1}}%
               </div>
@@ -25,16 +26,17 @@
                 Passed: {{currentCategory.passed}}/{{currentCategory.answered}} {{currentCategory.passed*100/currentCategory.answered |number:1}}%
               </div>
             </div>
-
-          </span>
-        </div>
-        <div class = "clearfix">
-          <h3 class = "center">Tags</h3>
-          <span ng-repeat="score in user.scores|orderBy:'-answered'|filter:tagFilter">
-            <score-display class = "vertical-expand-in" score="score" ng-click="setCurrentCategory(score)" ng-if = "!(currentCategory==score)"> </score-display>
+          </div>
+        </span>
+      </div>
+      <div class="clearfix">
+        <h3 class="center">Tags</h3>
+        <span ng-repeat="score in user.scores|orderBy:'-answered'|filter:tagFilter">
+          <div class="score-wrapper">
+            <score-display class="vertical-expand-in" score="score" ng-click="setCurrentCategory(score)" ng-if="!(currentCategory==score)"> </score-display>
 
             <div class="white card vertical-expand-in" ng-if='currentCategory==score'>
-              <div class="h3">{{currentCategory._category.name.toUpperCase()}}</div>
+              <div class="h4">{{currentCategory._category.name.toUpperCase()}}</div>
               <div class="">
                 Correct: {{currentCategory.correct}}/{{currentCategory.answered}} {{currentCategory.correct*100/currentCategory.answered |number:1}}%
               </div>
@@ -45,9 +47,10 @@
                 Passed: {{currentCategory.passed}}/{{currentCategory.answered}} {{currentCategory.passed*100/currentCategory.answered |number:1}}%
               </div>
             </div>
-          </span>
-        </div>
+          </div>
+        </span>
       </div>
-
     </div>
+
+  </div>
 </div>
