--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
 
     <ng-view>
     </ng-view>
+
+    <footer>
+      
+    </footer>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
