--- a/public/app/js/login/login_template.html
+++ b/public/app/js/login/login_template.html
@@ -1,15 +1,16 @@
-<div class = 'well container'>
-  <form class = "loginForm container" ng-submit= "login(loginUser)">
-    <span ng-show = "signup">
-      <input type = "password" class = "form-control" placeholder = "display name" ng-required = "signup" ng-model = 'loginUser.display_name'>
-    </span>
-    <input type = "email" class = "form-control" placeholder = "email" required ng-model = 'loginUser.email'>
-    <input type = "password" class = "form-control" placeholder = "password" required ng-model = 'loginUser.password'>
-    <div class = "left-margin" ng-hide = "signup">
-      <button class = "btn-primary btn-lg" type = "submit">Login</button> <span  class = "login-message" ng-click = "signup=true">Sign Up</span>
+<div class = 'login-form'>
+  <form class = "loginForm" ng-submit= "login(loginUser)">
+    <input type = "email" class = "" placeholder = "email" required ng-model = 'loginUser.email'>
+    <input type = "password" class = "" placeholder = "password" required ng-model = 'loginUser.password'>
+    <div>
+      <button class = "center-block login-button" type = "submit">Login</button>
     </div>
+    <span class = "center">
+      -- or --
+    </span>
+    <a href="/auth/facebook">
+      <img class = "center-block" src = "images/facebook-login.png" width="175px">
+    </a>
   </form>
-  <a href="/auth/facebook">
-    <img class = "center-block" src = "images/facebook-login.png" width="175px">
-  </a>
+
 </div>
