Pagination to question view for admin

--- a/public/app/js/admin/admin_template.html
+++ b/public/app/js/admin/admin_template.html
@@ -1,15 +1,17 @@
-Admin Pages
-<ul>
-  <li ng-click = "goto('admin/questions')">
-    Edit Questions
-  </li>
-  <li ng-click = "goto('admin/users')">
-    Set Admins
-  </li>
-  <li ng-click = "goto('admin/complaints')">
-    View Flagged Questions
-  </li>
-  <li ng-click = "goto('admin/categories')">
-    Manage Categories
-  </li>
-</ul>
+<div class="white card">
+  Admin Pages
+  <ul>
+    <li ng-click="goto('admin/questions')">
+      Edit Questions
+    </li>
+    <li ng-click="goto('admin/users')">
+      Set Admins
+    </li>
+    <li ng-click="goto('admin/complaints')">
+      View Flagged Questions
+    </li>
+    <li ng-click="goto('admin/categories')">
+      Manage Categories
+    </li>
+  </ul>
+</div>
