--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
     <script src = "app/js/admin/complaints/adminComplaintsController.js"></script>
     <script src = "app/js/admin/categories/adminCategoriesController.js"></script>
     <script src = "app/js/admin/questions/adminQuestionsController.js"></script>
+    <script src = "app/js/admin/editQuestion/editQuestionController.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   </body>
 </html>
