Making stats backend and connecting it to the front end splash screen on login.

--- a/public/app/js/login/login_template.html
+++ b/public/app/js/login/login_template.html
@@ -1,4 +1,7 @@
-<div class = 'login-form'>
+
+<div class = "card"><welcome></welcome>
+</div>
+<div class = 'card login-form'>
   <form class = "loginForm" ng-submit= "login(loginUser)">
     <input type = "email" class = "" placeholder = "email" required ng-model = 'loginUser.email'>
     <input type = "password" class = "" placeholder = "password" required ng-model = 'loginUser.password'>
