--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,11 @@
     <script src = "app/js/auth/authController.js"></script>
     <script src = "app/js/profile/profileController.js"></script>
     <script src = "app/js/rankings/rankingsController.js"></script>
+    <script src = "app/js/welcome/welcome.js"></script>
     <script src = "app/js/services/questionsService.js"></script>
     <script src = "app/js/services/usersService.js"></script>
     <script src = "app/js/services/authService.js"></script>
+    <script src = "app/js/services/statsService.js"></script>
     <script src = "app/js/services/categoriesService.js"></script>
     <script src = "app/js/services/sessionService.js"></script>
     <script src = "app/js/services/complaintsService.js"></script>
