--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     </nav>
 
 
+    <!-- <score-graph scores-collection = "scores"></score-graph> -->
     <ng-view>
     </ng-view>
 
@@ -36,6 +37,7 @@
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
+    <script src = "lib/chart.js/Chart.js"></script>
     <script src = "app/app.js"></script>
     <script src = "app/js/quiz/quizController.js"></script>
     <script src = "app/js/auth/authController.js"></script>
@@ -50,6 +52,7 @@
     <script src = "app/js/services/sessionService.js"></script>
     <script src = "app/js/services/complaintsService.js"></script>
     <script src = "app/js/directives/score/scoreDisplay.js"></script>
+    <script src = "app/js/directives/scoreGraph/scoreGraph.js"></script>
     <script src = "app/js/users/usersController.js"></script>
     <script src = "app/js/header/headerController.js"></script>
     <script src = "app/js/newQuestion/newQuestionController.js"></script>
@@ -61,6 +64,7 @@
     <script src = "app/js/admin/categories/adminCategoriesController.js"></script>
     <script src = "app/js/admin/questions/adminQuestionsController.js"></script>
     <script src = "app/js/admin/editQuestion/editQuestionController.js"></script>
+
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   </body>
 </html>
