--- a/public/app/js/profile/profile_template.html
+++ b/public/app/js/profile/profile_template.html
@@ -21,7 +21,7 @@
 
   <div ng-if = "!editing" class="white card">
     <div>
-      <h4>You have written {{user.questionsAsked}} questions in {{user.categoriesAsked}} categories covering {{user.tagsAsked + user.categoriesAsked}} topics.
+      <h4 ng-if = "user.questionsAsked">You have written {{user.questionsAsked}} questions in {{user.categoriesAsked}} categories covering {{user.tagsAsked + user.categoriesAsked}} topics.
       Which have been asked {{user.timesQuestionsAsked}} times.</h4>
     </div>
     <div class="max-scroll-box profile">
