--- a/public/app/js/rankings/rankings_template.html
+++ b/public/app/js/rankings/rankings_template.html
@@ -12,7 +12,7 @@
   </div>
   <div class = "col-sm-3">
     <div ng-repeat = "rank in rankings">
-      {{rank.display_name}}:{{rank.scores.score | number:0}}
+      {{rank.display_name.slice(0,30)}}:{{rank.scores.score | number:0}}
     </div>
   </div>
 </div>
