--- a/public/app/js/quiz/quiz_template.html
+++ b/public/app/js/quiz/quiz_template.html
@@ -29,7 +29,7 @@
 </h2></div>
 
 <div class = "question quiz-view" ng-show = "question" ng-click="clickEvent($event)">
-  <h3>{{question.question}}</h3>
+  <h3 ng-class = "{'small-text':question.question.length>50}" >{{question.question}}</h3>
   <ul class = "container-fluid">
     <div class = "row">
     <li class = "possible_answer"
@@ -37,7 +37,7 @@
         ng-class = "{noselect:true, selected:$parent.selected == answer, correct:$parent.correct_answer === answer && $parent.answered, wrong:$parent.selected == answer && $parent.correct_answer}"
         ng-click = "select(answer)"
         ng-repeat = "answer in question.possible_answers">
-        <div class = "possible_answer">{{answer}}</div></li>
+        <div class = "possible_answer" ng-class = "{'small-text':answer.length>25}" >{{answer}}</div></li>
     </div>
   </ul>
   <div class = "container-fluid">
