--- a/public/app/js/quiz/quiz_template.html
+++ b/public/app/js/quiz/quiz_template.html
@@ -31,7 +31,10 @@
 <div class = "question quiz-view" ng-show = "question" ng-click="clickEvent($event)">
   <h3 ng-class = "{'small-text':question.question.length>50}" >{{question.question}}</h3>
   <div class="image-container" ng-if = "question.pictureUrl">
-    <img class = "quiz-image" ng-src ="https://s3.amazonaws.com/{{question.pictureUrl}}">
+    <img ng-click = "imagemodal = true" class = "quiz-image" ng-src ="https://s3.amazonaws.com/{{question.pictureUrl}}">
+    <div ng-click = "imagemodal=false" class = "picturemodal" ng-class = "{hiddenmodal:!imagemodal}">
+      <img class = "image" ng-src ="https://s3.amazonaws.com/{{question.pictureUrl}}">
+    </div>
   </div>
   <ul class = "container-fluid">
     <div class = "row">
