Redo ranking page.

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
     <script src = "node_modules/ng-img-crop/compile/minified/ng-img-crop.js" charset="utf-8"></script>
     <script src = "node_modules/ng-file-upload/dist/ng-file-upload.js" charset="utf-8"></script>
-    <script src = "lib/chart.js/Chart.js"></script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src = "app/app.js"></script>
     <script src = "app/js/quiz/quizController.js"></script>
     <script src = "app/js/auth/authController.js"></script>
