--- a/public/app/js/rankings/rankings_template.html
+++ b/public/app/js/rankings/rankings_template.html
@@ -1,18 +1,19 @@
 <div class = "white card max-scroll-box">
   <h3>Categories</h3>
-  <span ng-repeat = "score in user.scores|orderBy:'-score'|filter:catFilter">
-    <score-display score = "score" ng-click = "getRankings(score)" > </score-display>
-  </span>
+  <div class="rankCategories" >
+    <score-display ng-repeat = "score in user.scores|orderBy:'-score'|filter:catFilter" score = "score" ng-click = "getRankings(score)" > </score-display>
+  </div>
 </div>
 <div class = "white card row">
   <div class = "col-sm-9">
-    <div ng-if = "ready==2">
-      <score-graph scores-collection = "scoreData"> </score-graph>
+    <div ng-if = "ready==2" class = "ranking-graph">
+      <score-graph scores-collection = "scoreData", my-score="myScore"> </score-graph>
     </div>
   </div>
-  <div class = "col-sm-3">
-    <div ng-repeat = "rank in rankings">
-      {{rank.display_name.slice(0,30)}}:{{rank.scores.score | number:0}}
+  <div class = "col-sm-3 mini-rank">
+    <div ng-repeat = "rank in rankings" class="flex rank-item" ng-class="{'my-rank':rank._id == user._id}">
+      <div class="flex1">{{rank.display_name.slice(0,25)}}</div>
+      <div class="flex1">{{rank.scores.score | number:0}}</div>
     </div>
   </div>
 </div>
