Overlay on widescreen, expand on small.

--- a/public/app/js/profile/profile_template.html
+++ b/public/app/js/profile/profile_template.html
@@ -25,13 +25,13 @@
       Which have been asked {{user.timesQuestionsAsked}} times.</h4>
     </div>
     <div class="max-scroll-box profile">
-      <div class="clearfix">
+      <div>
         <h3 class="center">Categories</h3>
         <span ng-repeat="score in user.scores|orderBy:'-score'|filter:catFilter">
-          <div class="score-wrapper">
-            <score-display class="vertical-expand-in" score="score" ng-click="setCurrentCategory(score)" ng-hide="currentCategory==score"> </score-display>
+          <div class="score-wrapper relative">
+            <score-display class="vertical-expand-in" score="score" ng-click="setCurrentCategory(score)" ng-class='{"selected-tag":currentCategory==score}'> </score-display>
 
-            <div class="white card vertical-expand-in" ng-if='currentCategory==score'>
+            <div class="tag-card vertical-expand-in" ng-if='currentCategory==score'>
               <div class="h4">{{currentCategory._category.name.toUpperCase()}}</div>
               <div class="">
                 Correct: {{currentCategory.correct}}/{{currentCategory.answered}} {{currentCategory.correct*100/currentCategory.answered |number:1}}%
@@ -46,13 +46,12 @@
           </div>
         </span>
       </div>
-      <div class="clearfix">
+      <div>
         <h3 class="center">Tags</h3>
         <span ng-repeat="score in user.scores|orderBy:'-answered'|filter:tagFilter">
-          <div class="score-wrapper">
-            <score-display class="vertical-expand-in" score="score" ng-click="setCurrentCategory(score)" ng-if="!(currentCategory==score)"> </score-display>
-
-            <div class="white card vertical-expand-in" ng-if='currentCategory==score'>
+          <div class="score-wrapper relative">
+            <score-display class="vertical-expand-in" score="score" ng-click="setCurrentCategory(score)" ng-class='{"selected-tag":currentCategory==score}'> </score-display>
+            <div class="tag-card vertical-expand-in" ng-if='currentCategory==score'>
               <div class="h4">{{currentCategory._category.name.toUpperCase()}}</div>
               <div class="">
                 Correct: {{currentCategory.correct}}/{{currentCategory.answered}} {{currentCategory.correct*100/currentCategory.answered |number:1}}%
