--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,14 @@
   <body ng-controller = "authController">
 
 
-    <nav ng-controller = "headerController">
+    <nav>
       <div class="container">
         <h1>Elo Everything</h1>
         <ul>
-          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/quiz/')">Quiz</li>
-          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/profile/')">Profile</li>
-          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/rankings/')">Rankings</li>
-          <li class = "hide-on-small" ng-show = 'currentUser' role = "presentation" ng-click = "goto('/newQuestion/')">Add Question</li>
+          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/quiz')">Quiz</li>
+          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/profile')">Profile</li>
+          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/rankings')">Rankings</li>
+          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/newQuestion/')">Add Question</li>
           <li ng-hide = 'currentUser' role = "presentation" ng-click = "goto('/login/')">Login</li>
           <li ng-show = 'currentUser' role = "presentation" ng-click = "logout()">Logout</li>
         </ul>
@@ -29,8 +29,6 @@
       </div>
     </nav>
 
-
-    <!-- <score-graph scores-collection = "scores"></score-graph> -->
     <ng-view>
     </ng-view>
 
